--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -3,6 +3,7 @@ name: Stage the app
 on: 
   pull_request:
     types: [labeled]
+
 env:
   DOCKER_IMAGE_NAME: victorgonalCognizant-azure-ttt
   IMAGE_REGISTRY_URL: docker.pkg.github.com
@@ -13,6 +14,9 @@ env:
   ### REPLACE USERNAME WITH GH USERNAME         ###
   AZURE_WEBAPP_NAME: victorgonalCognizant-ttt-app
   #################################################
+
 jobs:
   build:
     runs-on: ubuntu-latest
+
+    if: contains(github.event.pull_request.labels.*.name, 'stage')
